--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-project",
-  "homepage": "https://github.io/Samandar99/react-food/",
+  "homepage": "https://Samandar99.github.io/react-food/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
