--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-project",
-  "homepage": "https://Samandar99.github.io/react-food/",
+  "homepage": "https://Samandar99.github.io/react-foods/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
